# openapi.json
@@ -20,24 +20,13 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "message": {
+                  "RAM": {
                     "type": "string",
                     "description": "The message to send to the chat"
                   },
-                  "history": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "message": {
-                          "type": "string"
-                        },
-                        "response": {
-                          "type": "string"
-                        }
-                      }
-                    },
-                    "description": "The chat history (optional)"
+                  "VCPU": {
+                    "type": "string",
+                    "description": "The message to send to the chat"
                   }
                 }
               }
@@ -52,7 +41,7 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "message": {
+                    "RAM": {
                       "type": "string",
                       "description": "The message sent to the chat"
                     },
@@ -60,21 +49,10 @@
                       "type": "string",
                       "description": "The chat response"
                     },
-                    "history": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "message": {
-                            "type": "string"
-                          },
-                          "response": {
-                            "type": "string"
-                          }
-                        }
-                      },
-                      "description": "The updated chat history"
-                    }
+                  "VCPU": {
+                    "type": "string",
+                    "description": "The message to send to the chat"
+                  }
                   }
                 }
               }
